--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
   align-items:center;
   justify-content:flex-end;
   position: sticky;
+  z-index: 1;
   top: 0px;
   height: 40px;
   margin-bottom: 20px;
@@ -22,11 +23,6 @@ body{
   font-family: 'Inter Tight', sans-serif;
   color: #0d1216;
   text-decoration: none;
-}
-
-/*Gran container*/
-.container{
-  display: block;
 }
 
 /*Título*/
@@ -62,38 +58,6 @@ body{
 }
 
 /*Fotos*/
-#img{
-  width: 100%;
-  height: 100%;
-}
-.foto{
-  width: 350px;
-  height: 400px;
-  margin: 5px;
-}
-.textoFoto{
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-#formato1{
-  background-color: #6D3826;
-  text-decoration: none;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: #FFFFFF;
-}
-#formato2{
-  background-color: #788143;
-  text-decoration: none;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: #FFFFFF;
-}
-#formato3{
-  background-color: #B89663;
-  text-decoration: none;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: #FFFFFF;
-}
 .fotos{
   display: flex;
   text-align: center;
@@ -101,92 +65,51 @@ body{
   margin-top: 20px;
   margin-bottom: 20px;
 }
+#img{
+  width: 100%;
+  height: 100%;
+}
+.foto{
+  position: relative;
+  width: 350px;
+  height: 400px;
+  margin: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.arriba{
+  position: absolute;
+  text-decoration: none;
+}
+#formato{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #FFFFFF;
+  text-decoration: none;
+  font-size: 18px;
+}
 
 /*Responsive*/
 @media screen and (max-width: 600px){
-  body{
-    background-color: #0d1216;
-    margin: 0px;
-    padding: 0px;
-    border: 0px;
-  }
-  
-  /*Menu de arriba*/
-  .menu{
-    display: flex;
-    align-items:center;
-    justify-content:flex-end;
-    position: sticky;
-    top: 0px;
-    height: 40px;
-    margin-bottom: 20px;
-    padding-right: 15px;
-    gap: 15px;
-    background-color:#FFFFFF;
-    font-size: 13px;
-  }
-  #textoMenu{
-    font-family: 'Inter Tight', sans-serif;
-    color: #0d1216;
-    text-decoration: none;
-  }
-  
   /*Título*/
-  .container{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-    align-items: center;
-  }
   #paraTitulo{
-    color: whitesmoke;
-    font-family: 'Climate Crisis', cursive;
-    font-size: 40px;
+    font-size: 45px;
     margin-right: 30px;
     margin-left: 20px;
-    text-align: center;
   }
   #para1{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 15px;
-    color:whitesmoke;
-    text-align: right;
     margin-right: 20px;
     margin-left: 20px;
-    margin-bottom: 0px;
-  }
-  
-  /*Línea separadora*/
-  .border-top{
-    border-width: 2px;
-  }
-  
-  /*Fotos*/
-  .img{
-    width: 100%;
-    height: 100%;
-  }
-  .foto{
-    width: 230px;
-    height: 280px;
-  }
-  .textoFoto{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #FFFFFF;
-  }
-  #fondo1{
-    background-color: #6D3826;
-  }
-  #fondo2{
-    background-color: #788143;
-  }
-  #fondo3{
-    background-color: #B89663;
   }
   .fotos{
-    display: flex;
     flex-wrap: wrap;
+  }
+  .foto{
+    width: 250px;
+    height: 300px;
+  }
+  #formato{
+    font-size: 15px;
   }
 }
