--- a/Comida/comida.css
+++ b/Comida/comida.css
@@ -64,15 +64,38 @@ body{
     align-content: center;
     align-items: center;
 }
-.Comida {  
-    display: grid;
-    grid-auto-columns: 1fr;
+.container {  display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    grid-auto-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
     grid-template-areas:
-      "1"
-      "2"
-      "3";
-    grid-area: Comida;
-}
+      "Café Medialunas Chipá"
+      "Hamburguesas Milanesas Italiana"
+      "Asiática Veggie Tapas";
+    width: 100%;
+    height: 100%;
+  }
+  
+  .Café { grid-area: Café; }
+  
+  .Medialunas { grid-area: Medialunas; }
+  
+  .Chipá { grid-area: Chipá; }
+  
+  .Hamburguesas { grid-area: Hamburguesas; }
+  
+  .Milanesas { grid-area: Milanesas; }
+  
+  .Italiana { grid-area: Italiana; }
+  
+  .Tapas { grid-area: Tapas; }
+  
+  .Asiática { grid-area: Asiática; }
+  
+  .Veggie { grid-area: Veggie; }
+  
+  
 
   
