--- a/style.css
+++ b/style.css
@@ -20,30 +20,32 @@ body{
   background-color:#FFFFFF;
 }
 #textoMenu{
-  font-family: 'Inter Tight', sans-serif;
+  font-family: 'DM Sans', sans-serif;
   color: #0d1216;
   text-decoration: none;
+  font-size: 17px;
 }
 
 /*Título*/
 .container{
-  margin-top: 20px;
   margin-bottom: 20px;
-  display: flex;
-  justify-content: space-evenly;
-  align-content: center;
+  display: grid;
+  grid-template-columns: 1;
+  grid-template-rows: 2;
+  justify-content: center;
   align-items: center;
 }
 #paraTitulo{
   color: whitesmoke;
-  font-family: 'Climate Crisis', cursive;
-  font-size: 60px;
+  font-family: 'DM Serif Display', serif;
+  font-size: 75px;
   margin-right: 50px;
   margin-left: 40px;
   text-align: center;
+  
 }
 #para1{
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'DM Sans', sans-serif;
   font-size: 20px;
   color:whitesmoke;
   text-align: right;
@@ -80,10 +82,9 @@ body{
 }
 .arriba{
   position: absolute;
-  text-decoration: none;
 }
 #formato{
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'DM Sans', sans-serif;
   color: #FFFFFF;
   text-decoration: none;
   font-size: 18px;
