--- a/Barrio/barrio.css
+++ b/Barrio/barrio.css
@@ -8,95 +8,64 @@ body{
 }
 .menu{
     display: flex;
+    align-items:center;
+    justify-content:flex-end;
     position: sticky;
+    z-index: 1;
+    top: 0px;
     height: 40px;
-    top: 0;
     margin-bottom: 20px;
+    padding-right: 15px;
+    gap: 15px;
     background-color:#FFFFFF;
-    font-family: 'Inter Tight', sans-serif;
+  }
+  #textoMenu{
+    font-family: 'DM Sans', sans-serif;
     color: #0d1216;
-    align-items: center;
-    justify-content: space-between;
-}
-.volver{
-    margin-left: 5px;
-    margin-right: 15px;
-}
-.inicio{
-    margin-right: 15px;
-}
-#link:first-child{
-    color:#0d1216;
-}
-.subrayado {
     text-decoration: none;
-}
-.espacio{
-    margin-right: 15px;
-}
-.flecha1{
-    margin-right: 5px;
-}
+    font-size: 17px;
+  }
 
 /*Solo de esta página*/
 .titulo{
     display: flex;
     justify-content: center;
     align-content: center;
-    font-family: 'Climate Crisis', cursive;
+    font-family: 'DM Serif Display', serif;
     color: whitesmoke;
     font-size: 30px;
     margin-top: 30px;
     margin-bottom: 10px;
 }
-.container{
+
+/*fotos*/
+.fotos{
     display: flex;
-    justify-content: space-evenly;
-    align-items: baseline;
-    align-content: center;
-}
-.foto{
-    background-image:url(./imagenes/Palermo.jpg);
-    background-size: cover;
-    width: 250px;
-    height: 350px;
-}
-.foto1{
-    background-image:url(./imagenes/Colegiales.jpg);
-    background-size: cover;
-    width: 250px;
-    height: 350px;
-}
-.foto2{
-    background-image:url(./imagenes/San\ Telmo.jpg);
-    background-size: cover;
-    width: 250px;
-    height: 350px;
-}
-.foto3{
-    background-image:url(./imagenes/Cañitas.jpg);
-    background-size: cover;
-    width: 250px;
-    height: 350px;
-}
-.foto4{
-    background-image:url(./imagenes/Nuñez-Belgrano.jpg);
-    background-size: cover;
-    width: 250px;
-    height: 350px;
-}
-.texto-fotos{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #FFFFFF;
-    background-color: #788143;
     text-align: center;
-    padding: 10px;
-    margin-top: 160px;
-    margin-left: 30px;
-    margin-right: 30px;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  #img{
+    width: 100%;
+    height: 100%;
+  }
+  .foto{
+    position: relative;
+    width: 350px;
+    height: 400px;
+    margin: 5px;
     display: flex;
+    align-items: center;
     justify-content: center;
-}
-.subrayado{
+  }
+  .arriba{
+    position: absolute;
+  }
+  #formato{
+    font-family: 'DM Sans', sans-serif;
+    color: #FFFFFF;
     text-decoration: none;
-}
+    font-size: 18px;
+  }
+
