--- a/Barrio/barrio.css
+++ b/Barrio/barrio.css
@@ -31,11 +31,11 @@ body{
     display: flex;
     justify-content: center;
     align-content: center;
-    font-family: 'DM Serif Display', serif;
+    font-family: 'DM Sans', sans-serif;
     color: whitesmoke;
-    font-size: 30px;
-    margin-top: 30px;
-    margin-bottom: 10px;
+    font-size: 40px;
+    margin-top: 50px;
+    margin-bottom: 40px;
 }
 
 /*fotos*/
