--- a/Comida/comida.css
+++ b/Comida/comida.css
@@ -8,93 +8,65 @@ body{
 }
 .menu{
     display: flex;
+    align-items:center;
+    justify-content:flex-end;
     position: sticky;
+    z-index: 1;
+    top: 0px;
     height: 40px;
-    top: 0;
     margin-bottom: 20px;
+    padding-right: 15px;
+    gap: 15px;
     background-color:#FFFFFF;
-    font-family: 'Inter Tight', sans-serif;
+  }
+  #textoMenu{
+    font-family: 'DM Sans', sans-serif;
     color: #0d1216;
-    align-items: center;
-    justify-content: space-between;
-}
-.volver{
-    margin-left: 5px;
-    margin-right: 15px;
-}
-.inicio{
-    margin-right: 15px;
-}
-#link:first-child{
-    color:#0d1216;
-}
-.subrayado {
     text-decoration: none;
-}
-.espacio{
-    margin-right: 15px;
-}
-.flecha1{
-    margin-right: 5px;
-}
+    font-size: 17px;
+  }
+
 /*Solo de esta página*/
-.container {  display: grid;
-    grid-template-columns: 1.5fr 1.5fr;
-    grid-template-rows: 1fr;
-    grid-auto-columns: 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "Buscador Comida";
-} 
+/*Texto ppal*/ 
 .Intro{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 40px;
-    color:whitesmoke;
     display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
     padding: 10px;
+    flex-wrap: wrap;
+}
+#titulo{
+    font-family:'DM Sans', sans-serif;
+    font-size: 40px;
+    color:whitesmoke;
+}
+#texto{
+    font-family:'DM Sans', sans-serif;
+    font-size: 20px;
+    color:whitesmoke;
+    text-align:center;
+    padding: 10px;
 }
 
-.Buscador {
+/*Contenido*/
+.rutas {  
     display: flex;
+    align-content: space-between;
     justify-content: center;
-    align-content: center;
-    align-items: center;
-}
-.container {  display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-auto-columns: 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "Café Medialunas Chipá"
-      "Hamburguesas Milanesas Italiana"
-      "Asiática Veggie Tapas";
-    width: 100%;
-    height: 100%;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: 'DM Serif Display', serif;;
+    padding: 10px;
+    flex-wrap: wrap;
   }
   
-  .Café { grid-area: Café; }
+#elemento {
+    height: 100%;
+    width: 30%;
+}
+
   
-  .Medialunas { grid-area: Medialunas; }
-  
-  .Chipá { grid-area: Chipá; }
-  
-  .Hamburguesas { grid-area: Hamburguesas; }
-  
-  .Milanesas { grid-area: Milanesas; }
-  
-  .Italiana { grid-area: Italiana; }
-  
-  .Tapas { grid-area: Tapas; }
-  
-  .Asiática { grid-area: Asiática; }
-  
-  .Veggie { grid-area: Veggie; }
   
   
 
