--- a/Comida/comida.css
+++ b/Comida/comida.css
@@ -35,7 +35,8 @@ body{
     align-items: center;
     padding: 10px;
     flex-wrap: wrap;
-    margin: 40px;
+    margin-top: 40px;
+    margin-bottom: 5px;
 }
 #titulo{
     font-family:'DM Sans', sans-serif;
@@ -48,10 +49,38 @@ body{
     color:whitesmoke;
     text-align:center;
     padding: 10px;
+
 }
-
-
-  
+/*Responsive*/
+@media screen and (max-width: 790px){
+    #textoMenu{
+        font-family: 'DM Sans', sans-serif;
+        color: #0d1216;
+        text-decoration: none;
+        font-size: 14px;
+      }
+    .Intro{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        margin-top: 25px;
+    }
+    #titulo{
+        font-family:'DM Sans', sans-serif;
+        font-size: 30px;
+        color:whitesmoke;
+    }
+    #texto{
+        font-family:'DM Sans', sans-serif;
+        font-size: 18px;
+        color:whitesmoke;
+        text-align:center;
+        padding: 10px;
+    
+    } 
+}
   
   
 
