--- a/Barrio/barrio.css
+++ b/Barrio/barrio.css
@@ -27,15 +27,14 @@ body{
   }
 
 /*Solo de esta página*/
-.titulo{
+#titulo{
     display: flex;
     justify-content: center;
     align-content: center;
     font-family: 'DM Sans', sans-serif;
     color: whitesmoke;
     font-size: 40px;
-    margin-top: 50px;
-    margin-bottom: 40px;
+    margin-top: 38px;
 }
 
 /*fotos*/
@@ -43,7 +42,7 @@ body{
     display: flex;
     text-align: center;
     justify-content: space-evenly;
-    margin-top: 45px;
+    margin-top: 30px;
     margin-bottom: 45px;
   }
   #img{
