--- a/Barrio/Caballito/caballito.css
+++ b/Barrio/Caballito/caballito.css
@@ -25,4 +25,49 @@ body{
     text-decoration: none;
     font-size: 17px;
   }
+  .foto{
+    height: 302px;
+    width: 260px;
+  }
+  .Intro{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding: 10px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
+  #titulo{
+    font-family:'DM Sans', sans-serif;
+    font-size: 40px;
+    color:whitesmoke;
+}
   
+#texto{
+  font-family:'DM Sans', sans-serif;
+  font-size: 20px;
+  color:whitesmoke;
+}
+
+.fotos {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
+
+.restaurante {
+  display: none;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.726);
+  padding: 10px;
+}
+
+.fotos:hover .restaurante {
+  display: block;
+  text-align: center;
+  font-family:'DM Sans', sans-serif;
+}  
