--- a/style.css
+++ b/style.css
@@ -29,11 +29,12 @@ body{
 /*Título*/
 .container{
   margin-bottom: 20px;
-  display: grid;
-  grid-template-columns: 1;
-  grid-template-rows: 2;
+  display: flex;
   justify-content: center;
   align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 #paraTitulo{
   color: whitesmoke;
@@ -48,7 +49,7 @@ body{
   font-family: 'DM Sans', sans-serif;
   font-size: 20px;
   color:whitesmoke;
-  text-align: right;
+  text-align: center;
   margin-right: 40px;
   margin-left: 40px;
   margin-bottom: 0px;
@@ -92,9 +93,9 @@ body{
 
 /*Buscador*/
 .buscador{
-  display: flex;
   justify-content: center;
   align-items: center;
+  align-content: center;
   flex-wrap: wrap;
   flex-direction: column;
   margin: 35px;
@@ -104,6 +105,7 @@ body{
   font-size: 30px;
   font-family: 'DM Sans', sans-serif;
   color: whitesmoke;
+  text-align: center;
 }
 #textoC{
   font-size: 20px;
@@ -145,6 +147,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    align-content: center;
     flex-wrap: wrap;
     flex-direction: column;
     margin: 25px;
