--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ body{
   font-size: 20px;
   font-family: 'DM Sans', sans-serif;
   color: whitesmoke;
+  text-align: center;
 }
 
 /*Responsive*/
